--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <br>
       
       <a href="https://photos.fife.usercontent.google.com/pw/AP1GczNQsM5sE-4lb2hQZtn6_s32Op7wgw8HdBG6Vz1z31r1RsU1g1FsGDQIpA=w651-h869-s-no-gm?authuser=0">
-        <img src="file:///C:/Users/user/Downloads/1464063708625.jpeg" height="200px" alt="sigma baby me">
+        <p>just imagine a cute and sigma baby</p>
       </a>
       <img 
         src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnp0NHJsand4Y3J0Y3Q4bGk0Y2gydHA2cDR6cWFkZGNwam1ndGUxZiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/zvRG3Mpwj5j5S/giphy.gif"
